Исправил замечания после ревью